# unicum_api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  compose.yml
.github/workflows/: multi-build.yml
.sqlx/: query-43e518be07f44aaf4122f5c99f4193d1f404343a313a75bb826f8df84fa130d1.json
docs/: testing_style.md
examples/: testing.rs
src/: config.rs  database.rs  lib.rs  logging.rs  main.rs  state.rs  user_mgmt.rs  users.rs
src/api/: auth.rs  error.rs  machines.rs  mod.rs  sales.rs  state.rs  stock.rs
src/contracts/: error.rs  mod.rs
src/entities/: mod.rs
src/impls/: mod.rs
src/impls/unicum_api/: get_sales.rs  get_state.rs  get_stock.rs  login.rs  mod.rs  set_stock.rs  utils.rs
src/impls/unicum_api/internal/: get_colls.rs  hex_machine_bm.rs  product.rs
src/outbound/official/: client.rs  contracts.rs  error.rs  get_sales.rs  get_state.rs  get_stock.rs  http.rs  login.rs  mod.rs  scraper.rs  set_stock.rs  utils.rs
src/outbound/official/internal/: get_colls.rs  hex_machine_bm.rs  mod.rs  product.rs
src/outbound/official/types/: mod.rs  product.rs
src/outbound/official/upstream/: get_colls.rs  get_hex_machine_bm.rs  get_machines.rs  get_sales.rs  get_state.rs  get_stock.rs  get_token.rs  mod.rs  set_stock.rs
