[package]
name = "unicum_api"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
colored = "3.1"
derive_more = { version = "2.1.1", features = ["from"] }
fern = { version = "0.7.1", features = ["colored"] }
log = "0.4.33"
reqwest = { version = "0.13.4", features = ["form", "json", "multipart"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.4", features = ["v1", "macro-diagnostics"] }
