[package]
name = "unicum_api"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
base64 = "0.22.1"
bitflags = { version = "2.13.0", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1"
derive_more = { version = "2.1.1", features = ["from"] }
dotenvy = "0.15.7"
enum-iterator = "2.3.0"
fern = { version = "0.7.1", features = ["colored"] }
inquire = "0.9.4"
log = "0.4.33"
protect-axum = "0.2.0"
reqwest = { version = "0.13.4", features = ["form", "json", "multipart"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.4", features = ["v1", "macro-diagnostics", "serde"] }
